
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 JUN 14b
  * in model/thermo/_generic/enthalpy.c
    - removed a comment within a comment that was introduced in 24jun12b


2024 JUN 14a
  * in model/chem/_NH3_Plasma_32s/rodriguez2024.c
    - fixed a bug in reaction 151
     

2024 JUN 13a
  * in model/transport/_Gupta-Yos/transport.c
    - added the option TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_ELECTRONMOBILITIESPARENTMACHERET
    

2024 JUN 12b
  * in model/chem/_NH3_Plasma_32s/Makefile
    - added rodriguez2024*
  * in model/chem/_NH3_Plasma_32s
    - added rodriguez2024.c and rodriguez2024.h
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added CHEMMODEL_RODRIGUEZ2024 
    - added HMINUSMODEL_*
  * in model/thermo/_generic/enthalpy.c
    - added species H2V9
  * in model/thermo/_generic/thermo.c
    - added species H2(V9)
  * in model/transport/_Dixon-Lewis/transport.c
    - added species H2(V9)
    

2024 JUN 12a
  * in model/chem/_N2_Plasma_4s/chem.c
    - added CHEMMODEL_RODRIGUEZ2024
  * in model/chem/_N2_Plasma_4s/
    - added rodriguez2024.c
  * in model/chem/_N2_Plasma_4s/doc/report.tex
    - added documentation for rodriguez2024 model
    

2024 JUN 10a
  * in model/share/transport_share.c
    - in _mueN_O2(), updated the spline control points
  * in model/transport/doc/report.tex
    - updated the spline control points for the reduced mobility of O2
    

2024 JUN 07c
  * in model/thermo/_generic/thermo.c
    - updated _zetav_from_Te_Parent2024()
   

2024 JUN 07b
  * in model/thermo/_generic/thermo.c
    - updated _zetav_from_Te_Parent2024()
   

2024 JUN 07a
  * in model/fluid/_Navier-Stokes_plasma/fluid.c
    - in write_model_fluid_template(), read_model_fluid_actions(), added in various locations code 