@@ -28,9 +28,10 @@ optionP  H2_Air_Plasma_18s
 optionP  H2_Cs_Air_Plasma_15s
 optionP  H2_He_CH4_Plasma_13s
 option   N2_Plasma_4s
+optionP   N2_Plasma_8s
 option   NH3_N2_2s_0r
 optionP   NH3_Plasma_32s
 optionP   NH3_Plasma_21s
-optionP   NH3_Plasma_34s
+optionPX   NH3_Plasma_34s
 help     A number followed by "s" denotes the number of species within the chemical model while a number followed by "r" denotes the number of reactions. The chemical models that include charged species are denoted by "plasma".  
 END
